# autodata

./: .gitignore  CMakeLists.txt  README.md
include/autodata/core/: batch_dataset.h  fixed_batch_dataset.h  map_dataset.h  range_dataset.h  shuffle_dataset.h  slice_dataset.h  vector_dataset.h
src/: batch_dataset.cpp  range_dataset.cpp  shuffle_dataset.cpp  slice_dataset.cpp  vector_dataset.cpp
tests/cpp/: test_main.cpp
